# MagmaExplorer

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/magma_explorer/: __init__.py  __main__.py  cache.py  client.py  config.py  magma.py  query.py
src/magma_explorer/tui/: app.py  widgets.py
src/magma_explorer/tui/screens/: browse.py  detail.py
tests/: test_cache.py  test_client.py  test_config.py  test_logic_eval.py  test_magma.py  test_query.py  test_tui.py
