[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "magma-explorer"
version = "0.1.0"
description = "TUI for exploring finite magmas satisfying Equation 677"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.80,<2.0",
    "httpx>=0.27",
    "platformdirs>=4.0",
]

[project.scripts]
magma-explorer = "magma_explorer.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
]

[tool.hatch.build.targets.wheel]
packages = ["src/magma_explorer"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "ASYNC"]

[tool.ruff.lint.isort]
known-first-party = ["magma_explorer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
